# readme2readall

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PYPI_PUBLISHING_GUIDE.md  README.md  README_PYPI.md  RELEASE_WORKFLOW_FIXES.md  app.py  demo_readme.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  test_cli.md  test_readme.md
.github/: CONTRIBUTING.md  GITHUB_ACTIONS_GUIDE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  release.yml
docs/: PROJECT_OVERVIEW.md
infra/: README.md  deploy-k8s.sh  validate-chart.sh  values-dev.yaml  values-prod.yaml
infra/helm/readme2word/: Chart.yaml  values.yaml
infra/helm/readme2word/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
infra/samples/: default-manifests.yaml  dev-manifests.yaml  prod-manifests.yaml
readme2word/: __init__.py  cli.py  converter.py  web.py
scripts/: build-package.sh  publish-package.sh
tests/: __init__.py  conftest.py  run_all_tests.py  test_converter.py  test_integration.py  test_mermaid.py  test_ui.py
